@@ -1,3 +1,7 @@
+2008-04-11  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/misc.h src/misc.c(lf_push): Track recursion depth for load_file().
+
 2008-04-10  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/gplt_x11.c src/mouse.c src/os2/gclient.c src/win/wgraph.c
